--- a/client/main.html
+++ b/client/main.html
@@ -10,7 +10,8 @@
 </body>
 
 <template name="hello">
-
-  <button>Test runSandbox</button>
   <p>In Galaxy this crashes the containers, but not on OSX</p>
+  <button>Test runSandbox</button>
+  <p> Response </p>
+  {{methodResponse}}
 </template>
