--- a/client/main.html
+++ b/client/main.html
@@ -10,7 +10,7 @@
 </body>
 
 <template name="hello">
-  <p>In Galaxy this crashes the containers, but not on OSX</p>
+  <p>In Galaxy this crashes the containers, but not on OSX. If you see no response after clicking, the galaxy container has crashed.</p>
   <button>Test runSandbox</button>
   <p> Response </p>
   {{methodResponse}}
